fix: fix for broken layout of bundles editor

--- a/packages/ui/src/ui/components/Dialog/Dialog.scss
+++ b/packages/ui/src/ui/components/Dialog/Dialog.scss
@@ -8,7 +8,7 @@
 
 .df-dialog_with_vertical_tabs {
     .yt-dialog__error {
-        margin: 0 -14px;
+        margin-left: -14px;
     }
 }
 
