--- a/packages/ui/src/ui/pages/tablet_cell_bundles/bundles/BundleEditorDialog/components/BundleInput/BundleInput.scss
+++ b/packages/ui/src/ui/pages/tablet_cell_bundles/bundles/BundleEditorDialog/components/BundleInput/BundleInput.scss
@@ -22,7 +22,7 @@
     &__right {
         flex-shrink: 0;
         display: flex;
-        width: 450px;
+        width: 100%;
         margin-left: auto;
     }
 
